# hse-msc-stuff

HSE.Machine_Learning/: README.md
HSE.Machine_Learning/HW_1/: hw01_task_upd.ipynb
HSE.Machine_Learning/HW_3/: hw3_task.ipynb
HSE.Machine_Learning/HW_4/: hw04_task.ipynb
HSE.Machine_Learning/HW_5/: hw05_task.ipynb
HSE.optimization/: README.md
HSE.optimization/HW_1/: d1_optimization.py  hw1_opt_prazd.ipynb
HSE.optimization/HW_2/: Task2_prazdnichnykh.ipynb  data_generator.py  methods.py  my_dataset.txt  oracle.py
HSE.optimization/HW_3/: Task3_Prazdnichnykh.ipynb
HSE.optimization/HW_exam/: Exam_Prazdnichnykh.ipynb  methods.py  oracle.py
Statistics/: Task2_Statistics.ipynb  Task6_Prazdnichnykh.ipynb
hse.bayes_course/.ipynb_checkpoints/: Relevance Vector Regression-checkpoint.ipynb
hse.bayes_course/practice_1/: BMML1_open_tests.py  BMML1_prototypes.py  anton_prazdnichnykh_v1.py  anton_prazdnichnykh_v3.py  appendix.ipynb  testing.py
hse.deep_python/: requirements.txt
hse.deep_python/hw3/: easy.py  hard.py  medium.py
hse.deep_python/hw4/: easy.py
hse.prod-stories-hw4/: README.md  labels.csv
hse.prod-stories-hw6/: README.md  examples.ipynb  n_grams.py  requirements.txt  spell_checker.py
hse_python_hw_1/: README.md  setup.cfg
hse_python_hw_1/src/hw_1_package/: ast_builder.py
python-backend-course/: README.md  main.py
stories-hw2/: clustering.py  experiments.ipynb  requirements.txt  trade_info.sqlite3  utils.py
stories-hw3/: README.md  data.py  main.py  mon_conj.py
telegram_bot/: README.md  bot.py  config.py  requirements.txt
(+45 files in other folders)
