[metadata]
name = python-hw-1-package-StrangeAttractor
version = 0.0.1
author = Anton Prazdnichnykh
author_email = antoshaigorevic@gmail.com
description = Code for HSE advanced python course wrapped into package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntonPrazdnichnykh/hse_python_hw_1
project_urls =
    Bug Tracker = https://github.com/AntonPrazdnichnykh/hse_python_hw_1/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
